Fixed header from overflowing in mobile view

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,6 +6,7 @@ body {
   font-size: 16px;
   height: 100%;
   /*  background-color: #F3F3F3;*/
+  overflow-x: hidden;
 }
 
 .main-content {
